--- a/assets/style.css
+++ b/assets/style.css
@@ -1,148 +1,50 @@
 /* body and header */
-body{
-    font-size: 16px;
-    padding: 0px;
-    background-color: #f8f9fa;
+
+body {
+  padding-top: 4.3rem; 
 }
 
-.header{
-    max-height: 278px;
-    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+h1, h2, h3 {
+    text-shadow: 0 0 3px #2196f3;
+    font-family: "Funnel Display", sans-serif;
 }
 
-.header-top {
-    background-color: black;
-    position: relative;
-    width: 100%;
-    height: 6vh;
-    display: flex;
-    align-items: center;
-}
-
-.header-top .logo {
-    position: absolute;
-    height: 3rem;
-    width: auto;
-    margin-left: 2rem;
-}
-
-.header-top .title {
-    position: absolute;
-    right: 30px;
-    top: 12px;
-    color: #adb5bd;
-    font-size: 13px;
-}
-
-.header img {
-    height: 15rem;
-    width: 100%;
-    object-fit: cover;
-    opacity: 0.7;
-}
-
-@media (min-width: 768px) {
-  .header img {
-    height: 15rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .header img {
-    height: 20rem;
-  }
-}
-
-.header-bottom {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    height: 600px;
-}
-
-.header-bottom-top {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 40%;
-    background-color: rgba(0, 0, 0, 0.55);
-    z-index: 1;
+.other-text, footer {
+    font-family: "Funnel Display", sans-serif;
 }
 
 .text {
-    position: relative;
-    z-index: 2;
-    color: white;
-    margin-bottom: 80%;
-    font-family: "Funnel Display", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400px;
-    font-style: normal;
-    margin-left: 10px;
-}
-
-
-/* body-body */
-h3 {
-    text-align: center;
-    text-shadow: 0 0 3px #7B3E9C;
-}
-
-.about {
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-
-.mb-3 {
-    margin-left: 2rem;
-    margin-right: 2rem;
-    margin-top: 3rem;
-}
-
-.btn {
-    margin-left: 3.9rem;
-}
-
-.about {
-    display: flex;
     font-family: "Bad Script", cursive;
-    font-weight: 400;
-    font-style: normal;
 }
-
 
 /* footer */
-footer{
-    margin-top: 0%;
-    text-align: center;
-}
 
-.first-footer{
-    position: relative;
-    background-color: black;
-    color: #FFFFFF;
-    width: 100%;
-    height: 10vh;
-    margin-top: 3rem;
-}
+@media (max-width: 575.98px) { 
+    footer .link {
+        left: 2rem;
+    }
 
-.right {
-    position: absolute;
-    bottom: 0.1rem;
-    right: 7rem;
-}
+    footer .copy {
+        right: 2rem;
+    }
+ }
 
-.wa {
-    height: 1rem;
-}
+@media (min-width: 576px) { 
+   footer .link {
+        left: 2rem;
+    }
+
+    footer .copy {
+        right: 2rem;
+    }
+ }
+
+@media (min-width: 768px) { 
+    footer .link {
+        left: 5rem;
+    }
+
+    footer .copy {
+        right: 5rem;
+    }
+ }
